--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Comfortaa:wght@300..700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  font-family: Comfortaa, sans-serif;
+}
+
+html {
+  font-size: 62.5%;
+}
